# code-genie

./: .gitignore  ADVANCED_FEATURES_SUMMARY.md  ADVANCED_INTEGRATION_SUMMARY.md  CLAUDE_CODE_FEATURES_SPEC_SUMMARY.md  CLAUDE_CODE_FEATURES_SUMMARY.md  CONFIG_FIX_SUMMARY.md  CONFIG_MKDIR_FIX_SUMMARY.md  CONTRIBUTING.md  DEPENDENCIES_UPDATE_SUMMARY.md  DEVPOST_STORY.md  DEVPOST_TECH_QUICK.txt  DEVPOST_TECH_STACK.md  DOCUMENTATION_DEPLOYMENT_SUMMARY.md  DOCUMENTATION_GENERATOR_INTEGRATION.md  Dockerfile  FEATURES_SUMMARY.md  FINAL_FIX_SUMMARY.md  FINAL_SUMMARY.md  FULL_APPLICATION_DEMO_RESULTS.md  GITHUB_FINAL_PUSH_SUCCESS.md  GITHUB_PUSH_SUCCESS.md  GITHUB_TASK_18_PUSH_SUCCESS.md  GITHUB_UPDATE_SUCCESS.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INTEGRATION_GUIDE.md  INTEGRATION_SUCCESS.md  NLP_PROGRAMMING_IMPLEMENTATION.md  PHASE1_TASK1_SUMMARY.md  PREDICTIVE_ASSISTANT_IMPLEMENTATION.md  QUICK_START.md  README.md  SEO_OPTIMIZATION_SUMMARY.md  SPECIALIZED_AGENTS_IMPLEMENTATION.md  TASK_10_MULTI_FILE_EDITOR_SUMMARY.md  TASK_10_SECURITY_PERFORMANCE_SUMMARY.md  TASK_11_ERROR_RECOVERY_SYSTEM_SUMMARY.md  TASK_12_DOCUMENTATION_GENERATOR_SUMMARY.md  TASK_13_CLI_INTEGRATION_SUMMARY.md  TASK_14_WEB_INTERFACE_INTEGRATION_SUMMARY.md  (+91 more)
demo_advanced_project/: .gitignore  README.md  requirements.txt
demo_advanced_project/src/: calculator.py  utils.py
demo_advanced_project/tests/: test_calculator.py
demo_cache/: current_session.json
demo_project/: test.py
deploy/aws/: cloudformation.yaml
deploy/kubernetes/: deployment.yaml
docs/: API_REFERENCE.md  CLAUDE_CODE_FEATURES_GUIDE.md  COMMAND_EXECUTOR_GUIDE.md  CONTEXT_ANALYZER_GUIDE.md  DEPLOYMENT.md  DIFF_ENGINE_GUIDE.md  DOCUMENTATION_INDEX.md  ERROR_RECOVERY_SYSTEM_GUIDE.md  FAQ.md  FEATURES.md  GETTING_STARTED.md  IDE_INTEGRATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  SUPPORT.md  TASK_10_SUMMARY.md  TEMPLATE_SYSTEM_GUIDE.md  TOOL_EXECUTOR_GUIDE.md  TROUBLESHOOTING.md  TUTORIALS.md  USER_GUIDE.md  VIDEO_TUTORIALS.md  VIDEO_TUTORIAL_SCRIPTS.md  WEB_INTERFACE_GUIDE.md
examples/: README.md
scripts/: docker-entrypoint.sh  install.sh  migrate.py  update.sh
src/codegenie/: __init__.py  cli.py
tests/: CLAUDE_CODE_TESTING_GUIDE.md  README.md  TASK_9.4_SUMMARY.md  TEST_SUITE_DOCUMENTATION.md  __init__.py  run_comprehensive_tests.py  test_basic.py
tests/e2e/: test_advanced_features_integration.py  test_agent_specialization_e2e.py  test_complete_system_e2e.py  test_comprehensive_integration.py  test_nlp_system_e2e.py  test_user_experience.py
tests/integration/: test_advanced_features_integration.py  test_api_system.py  test_autonomous_workflow.py  test_autonomous_workflow_performance.py  test_cicd_integration.py  test_claude_code_workflows.py  test_code_intelligence_integration.py  test_ide_integration.py  test_integration_framework.py  test_multi_agent_coordination.py  test_multi_agent_performance.py  test_nlp_workflow_integration.py  test_predictive_system_integration.py  test_safety_mechanisms.py  test_security_performance_integration.py  test_specialized_agents_basic.py  test_specialized_agents_coordination.py  test_team_collaboration.py  test_terminal_integration.py
tests/performance/: test_advanced_features_performance.py
tests/regression/: test_regression_suite.py
tests/scalability/: test_system_scalability.py
tests/security/: test_security_audit.py
tests/unit/: test_approval_system.py  test_code_generator.py  (+21 more)
(+118 files in other folders)
